--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 						<br>
 						<br>
 						Insulin is a <strong>PROTEIN</strong> molecule.
+						<sub>(Østergaard et al., 2020)<br>(Liu, 2014)<br>(Fu et al., 2013)<br>(https://www.facebook.com/thoughtcodotcom, 2014)</sub>
 					</p>
 				</div>
 				<button type="button" class="collapsible" style="text-align: center;">IUPAC Name</button>
@@ -134,6 +135,8 @@
 						In our body, insulin is produced in the pancreas. When blood sugar levels in our body spike, the pancreas produces more insulin as it allows cells in the body to use glucose as a source of energy.
 						<br><br>
 						Beta cells in the pancreas are what is responsible for the production of insulin. During the production of insulin, it's first synthesized as preproinsulin and processed into proinsulin/insulin. The C-peptide and insulin cells are then stored, awaiting release. 
+						<br><br>
+						<sub>(Østergaard et al., 2020)<br>(Weiss et al., 2014)<br>(How Insulin Is Made - Material, Manufacture, History, Used, Parts, Components, Structure, Steps, Product, n.d.)</sub>
 					</p>
 				</div>
 
@@ -154,14 +157,19 @@
 					The two chains then under go a <strong>reduction-reoxidation reaction</strong>, allowing the disulfide bonds to connect the chains. An oxidizing agent is added but different companies use different processes and agents so I can't find how they do it exactly. This process is how companies directly create insulin.
 					<br><br>
 					<strong>Proinsulin</strong> - is the other way synthetic insulin is made. The process of transfecting the E. coli bacteria remains the same, however the amino acid machine synthesizes the proinsulin gene rather than the A and B chains separately. As shown in the diagrams above, the difference between proinsulin and insulin is the C-Peptide, which is spliced away with an enzyme. 
+					<br><br>
+					<sub>(Østergaard et al., 2020)<br>(How Did They Make Insulin from Recombinant DNA?, 2019)<br>(How Insulin Is Made - Material, Manufacture, History, Used, Parts, Components, Structure, Steps, Product, n.d.)<br>(Fu et al., 2013)<br>(Donnor & Sarkar, 2000)</sub>
+
 				</p>
 				</div>
 				<button type="button" class="collapsible" style="text-align: center;">Manufacturing</button>
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
 					<p style="color:black;">
-						The difference between pre and proinsulin is the C-peptide connecting the A and B chains. An enzyme splices this peptide bond away, creating separate insulin and C-peptide molecules. These molecules are then stored in your body, interestingly the amount of C-peptide and insulin that is produced is the same which is why C-peptide tests can determine if your body has the ability to make insulin.
+						The difference between pre and proinsulin is the C-peptide connecting the A and B chains. An enzyme slices the peptide bond away, which ends up creating separate insulin and C-peptide molecules. These molecules are then stored in your body, interestingly the amount of C-peptide and insulin that is produced is the same which is why medical profesionals measure the amount C-peptide produced in a persons body to measure their ability to make insulin.
+						<sub>(Kyriakou, 2019)<br>(Helmenstine, 2021)</sub>
 					</p>
+					
 				</div>
 
 
@@ -182,15 +190,11 @@
 					<br>
 					<p style="color: black">
 						Insulin is an extremely important part of our digestive system as it moves around glucose cells
-						and balances the amount of blood sugar we have throughout our system. When people don't have
-						enough insulin in their system, they must increase their insulin intake through insulin pumps.
+						and balances the amount of blood sugar we have throughout our system. Diabeties happen when people don't have
+						enough insulin in their system, or the insulin they create is unable to move around glucose cells. This means they must take synthetic insulin through procedures like insulin therapy.
 						<br><br>
-						After insulin is created and used, our body disposes of it through metabolic waste. Insulin
-						helps store energy as glycogen, which is used in the creation of insulin. This may be
-						considered both a closed and open loop: The creation of insulin in our body is an open loop as
-						we take in carbohydrates, and create glucose which triggers our pancreas to create insulin to
-						balance the glucose in our body. Finally the insulin is disposed of through metabolic waste.
-						However, insulin is how our cells get energy which is needed in the process of creating insulin.
+						Insulin helps move glucose and store its energy as glycogen, which is used in the creation of insulin. This is why when our body creates insulin, it can be 
+						considered both a closed and open loop: The energy used to create glycogen in our body can be the same energy which we stored using insulin, however the insulin itself is broken down or disposed of through metabolic waste. Synthetic insulin is a closed system as the person is unable to create insulin (or it doesn't work), so it is used and disposed of.
 					</p>
 				</div>
 
@@ -198,11 +202,11 @@
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
 					<p style="color: black">
-						In our body insulin is disposed of through metabolic waste.
+						In our body insulin is broken down and enters our blood stream or disposed of through metabolic waste.
 
 						<br><br>
-						Insulin syringes and such are bio-hazardous sharps as they get infected with blood. This means they
-						must be incinerated in order to be properly disposed of. For patients undergoing insulin pump therapy and using omnipods, the environmental impact is very low. First, the replacement for the device takes around 4 years and 90% of the device can be recycled.
+						Insulin syringes are bio-hazardous sharps as they get infected with blood. This means they
+						must be incinerated in order to be properly disposed of. For patients undergoing insulin pump therapy and using devices like omnipods, the environmental impact is very low as the replacement for the device takes around 4 years, and 90% of the device can be recycled (electronic/batteries can be recycled).
 						<br><br>
 						<sub>(Pfützner et al., 2011)</sub>
 					</p>
