--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 					<br>
 					The cells are taken out of the tank and concentrated with <strong>cyanogen bromide</strong>, this step allows the insulin chains to separate from the bacteria.
 					<br>
-					The two chains then under go a <strong>reduction-reoxidation reaction</strong>, allowing the disulfide bonds to connect the chains. An oxidizing agent is added but different companies use different processes and agents so I can't find how they do it exactly. This process is how companies directly create insulin.
+					The two chains then undergo a <strong>reduction-reoxidation reaction</strong>, allowing the disulfide bonds to connect the chains. An oxidizing agent is added but different companies use different processes and agents so I can't find how they do it exactly. This process is how companies directly create insulin.
 					<br><br>
 					<strong>Proinsulin</strong> - is the other way synthetic insulin is made. The process of transfecting the E. coli bacteria remains the same, however the amino acid machine synthesizes the proinsulin gene rather than the A and B chains separately. As shown in the diagrams above, the difference between proinsulin and insulin is the C-Peptide, which is spliced away with an enzyme. 
 					<br><br>
@@ -177,7 +177,7 @@
 				<div class="content" style="background-color: rgb(180, 178, 178);">
 					<br>
 					<p style="color:black;">
-						Within our body insulin is distributed throughout he blood stream and moves glucose from our
+						Within our body insulin is distributed throughout he bloodstream and moves glucose from our
 						blood to our liver.
 						<br><br>
 						Insulin pumps and other diabetic medications are distributed over the counter.
@@ -194,7 +194,7 @@
 						enough insulin in their system, or the insulin they create is unable to move around glucose cells. This means they must take synthetic insulin through procedures like insulin therapy.
 						<br><br>
 						Insulin helps move glucose and store its energy as glycogen, which is used in the creation of insulin. This is why when our body creates insulin, it can be 
-						considered both a closed and open loop: The energy used to create glycogen in our body can be the same energy which we stored using insulin, however the insulin itself is broken down or disposed of through metabolic waste. Synthetic insulin is a closed system as the person is unable to create insulin (or it doesn't work), so it is used and disposed of.
+						considered both a closed and open loop: The energy used to create glycogen in our body can be the same energy which we stored using insulin, however the insulin itself is broken down or disposed of through metabolic waste. I guess can be considered a closed loop system? Synthetic insulin is an open system as the person is unable to create insulin (or the insulin they create doesn't work), so it is used and disposed of.
 					</p>
 				</div>
 
