--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 						The image above is my drawing of the lewis structure for the insulin. The molecular formula for
 						insulin is: C<sub>256</sub>H<sub>381</sub>N<sub>65</sub>O<sub>77</sub>S<sub>6</sub>
 
-						The key structural features of insulin are peptide bonds between each amino acid and disulfide
-						bonds between chain A and chain B.
+						The key structural features of insulin are <strong>peptide bonds</strong>(type of covalent bonding) between each <strong>amino acid</strong> and <strong>disulfide
+							bonds</strong> between chain A and chain B. Key features within the acid includes benzene, amine, and carboxyls.
 						<br><br>
 						(PubChem, 2019)
 					</p>
