--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 						<br>
 						<br>
 						Insulin is a <strong>PROTEIN</strong> molecule.
-						<sub>(Østergaard et al., 2020)<br>(Liu, 2014)<br>(Fu et al., 2013)<br>(https://www.facebook.com/thoughtcodotcom, 2014)</sub>
+						<br>
+						<sub>(Østergaard et al., 2020)<br>(Liu, 2014)<br>(Fu et al., 2013)<br></sub>
 					</p>
 				</div>
 				<button type="button" class="collapsible" style="text-align: center;">IUPAC Name</button>
@@ -195,6 +196,8 @@
 						<br><br>
 						Insulin helps move glucose and store its energy as glycogen, which is used in the creation of insulin. This is why when our body creates insulin, it can be 
 						considered both a closed and open loop: The energy used to create glycogen in our body can be the same energy which we stored using insulin, however the insulin itself is broken down or disposed of through metabolic waste. I guess can be considered a closed loop system? Synthetic insulin is an open system as the person is unable to create insulin (or the insulin they create doesn't work), so it is used and disposed of.
+						<br>
+						<sub>(Østergaard et al., 2020)<br>(Liu, 2014)<br>(Fu et al., 2013)<br></sub>
 					</p>
 				</div>
 
