--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				</header>
 				<br />
 				<p>Project by Brian Zhang</p>
-
+				<a class="button" href="https://github.com/Be4nis/be4nis.github.io">Link To Code</a>
 			</div>
 
 		</section>
@@ -104,15 +104,15 @@
 						The diagram above is of insulin, it acurately shows the different amino acids present in the
 						compound and the disulfide bonds formed between the amino acids.
 					</p>
-					<img src="lewisdrawing.pdf">
+					<img style ="max-width: 99%; max-height: 99%;" src="lewis.png">
 					<p style="color:black">
 						The image above is my drawing of the lewis structure for the insulin. The molecular formula for
 						insulin is: C<sub>256</sub>H<sub>381</sub>N<sub>65</sub>O<sub>77</sub>S<sub>6</sub>
 
 						The key structural features of insulin are <strong>peptide bonds</strong>(type of covalent bonding) between each <strong>amino acid</strong> and <strong>disulfide
-							bonds</strong> between chain A and chain B. Key features within the acid includes benzene, amine, and carboxyls.
+							bonds</strong> between chain A and chain B. Key features within the acid includes benzene, amine, glycin, aminoguanidine hydrochloride, and carboxyls.
 						<br><br>
-						(PubChem, 2019)
+						<sub>(Østergaard et al., 2020)<br>(Weiss et al., 2014)<br>(PubChem, 2019)<br>(Helmenstine, 2021)<br>(Fu et al., 2013)<br>(Pfützner et al., 2011)</sub>
 					</p>
 				</div>
 			</section>
