--- a/index.html
+++ b/index.html
@@ -24,16 +24,6 @@
 			<span class="heart-rain">&#9829;</span>
 			<span class="heart-rain">&#9829;</span>
 			<span class="heart-rain">&#9829;</span>
-			<span class="heart-rain">&#9829;</span>
-			<span class="heart-rain">&#9829;</span>
-			<span class="heart-rain">&#9829;</span>
-			<span class="heart-rain">&#9829;</span>
-			<span class="heart-rain">&#9829;</span>
-			<span class="heart-rain">&#9829;</span>
-			<span class="heart-rain">&#9829;</span>
-			<span class="heart-rain">&#9829;</span>
-			<span class="heart-rain">&#9829;</span>
-			<span class="heart-rain">&#9829;</span>
 
 			<div class="content" id="heart">
 				<h1 style="">💞Will you be my Valentine?👉👈</h1>
@@ -41,7 +31,7 @@
 				<ul class="actions stacked">
 					<li>
 						<a href="#first" class="button large wide smooth-scroll-middle">YES</a>
-						🙏🙏🙏
+						🙏
 						<a href="#first" class="button large wide smooth-scroll-middle">YESSS</a>
 					</li>
 				</ul>
@@ -56,7 +46,7 @@
 		<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
 			id="first">
 			<div class="content">
-				<h2>YAYYY I'm so happy you chose to say yes</h2>
+				<h2>YAYYY I'm so happy you <strong>chose</strong> yes</h2>
 				<p>This means you are invited to go on a <strong>DATE</strong> with me! How great and lucky is that? element, and it's generally used &ndash; as its name implies
 					&ndash; to spotlight a particular feature, subject, or pretty much whatever. You can customize its
 					<span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an
