--- a/fr.html
+++ b/fr.html
@@ -26,19 +26,17 @@
 			<span class="heart-rain">&#9829;</span>
 
 			<div class="content" id="heart">
-				<h1 style="">💞Will you be my Valentine?👉👈</h1>
+				<h1 style="">Are you serious right now? I'll crash out. You don't want that... right?</h1>
 
 				<ul class="actions stacked">
 					<li>
-						<a href="#first" class="button large wide smooth-scroll-middle">YES</a>
-						🙏
-						<a href="#first" class="button large wide smooth-scroll-middle">YESSS</a>
+						<a href="#first" class="button large wide smooth-scroll-middle">YES, I love you and I'm sorry</a>
 					</li>
 				</ul>
 			</div>
 
 			<div class="image">
-				<img src="/collage2.jpg" alt="" style="width: 42.5em; height: 43.2em" />
+				<img src="/angry.jpg" alt="" style="width: 42.5em; height: 43.2em" />
 			</div>
 		</section>
 
@@ -46,17 +44,11 @@
 		<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
 			id="first">
 			<div class="content">
-				<div style="font-size: 2em;">YAYYYY I'm so happy you <strong>CHOSE</strong> yes</div>
-				<p>This means you are invited to go on a <strong>DATE</strong> with me! How great and lucky is that?
-
-					element, and it's generally used &ndash; as its name implies
-					&ndash; to spotlight a particular feature, subject, or pretty much whatever. You can customize its
-					<span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an
-					optional <code>onload</code> or <code>onscroll</code> transition modifier (<a
-						href="#reference-spotlight">details</a>).
+				<div style="font-size: 2em;">It's ok...IG... I'll forgive you</div>
+				<p><strong>DO NOT let me catch you doing this again</strong>
 				</p>
 				<ul class="actions stacked">
-					<li><a href="fr.html" class="button">Regret saying yes? choose again</a></li>
+					<li><a href="index.html" class="button">Go Back</a></li>
 				</ul>
 			</div>
 			<div class="image">
@@ -64,201 +56,7 @@
 			</div>
 		</section>
 
-		<!-- Spotlight -->
-		<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
-			<div class="content">
-				<h2>Spotlight</h2>
-				<p>This is also a <strong>Spotlight</strong> element, and it's here because this demo would look a bit
-					empty with just one spotlight. Like all spotlights, you can customize its <span
-						class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an
-					optional <code>onload</code> or <code>onscroll</code> transition modifier (<a
-						href="#reference-spotlight">details</a>).</p>
-				<ul class="actions stacked">
-					<li><a href="#" class="button"></a></li>
-				</ul>
-			</div>
-			<div class="image">
-				<img src="images/spotlight02.jpg" alt="" />
-			</div>
-		</section>
-
-		<!-- Spotlight -->
-		<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
-			<div class="content">
-				<h2>Spotlight</h2>
-				<p>And yes, this is another <strong>Spotlight</strong> element, and it's also here because I need to
-					fill a bit of space. Naturally, like any other spotlight, you can customize its <span
-						class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an
-					optional <code>onload</code> or <code>onscroll</code> transition modifier (<a
-						href="#reference-spotlight">details</a>).</p>
-				<ul class="actions stacked">
-					<li><a href="#" class="button">Learn More</a></li>
-				</ul>
-			</div>
-			<div class="image">
-				<img src="images/spotlight03.jpg" alt="" />
-			</div>
-		</section>
-
-		<!-- Gallery -->
-		<section class="wrapper style1 align-center">
-			<div class="inner">
-				<h2>I Love you SOO SO SO MUCH</h2>
-				<p><strong>Cute Photos:)</strong></p>
-			</div>
-
-			<!-- Gallery -->
-			<div class="gallery style2 medium lightbox onscroll-fade-in">
-				<article>
-					<a href="images/gallery/fulls/01.jpg" class="image">
-						<img src="images/gallery/thumbs/01.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/02.jpg" class="image">
-						<img src="images/gallery/thumbs/02.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/03.jpg" class="image">
-						<img src="images/gallery/thumbs/03.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/04.jpg" class="image">
-						<img src="images/gallery/thumbs/04.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/05.jpg" class="image">
-						<img src="images/gallery/thumbs/05.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/06.jpg" class="image">
-						<img src="images/gallery/thumbs/06.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/07.jpg" class="image">
-						<img src="images/gallery/thumbs/07.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/08.jpg" class="image">
-						<img src="images/gallery/thumbs/08.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/09.jpg" class="image">
-						<img src="images/gallery/thumbs/09.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/10.jpg" class="image">
-						<img src="images/gallery/thumbs/10.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/11.jpg" class="image">
-						<img src="images/gallery/thumbs/11.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/12.jpg" class="image">
-						<img src="images/gallery/thumbs/12.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				I Love you
-
-			</div>
-
-		</section>
-		<br><br>
+		
 	</div>
 </body>
 <style>
