--- a/fr.html
+++ b/fr.html
@@ -52,7 +52,7 @@
 				</ul>
 			</div>
 			<div class="image">
-				<img src="images/spotlight01.jpg" alt="" />
+				<img src="/love.jpg" alt="" />
 			</div>
 		</section>
 
