--- a/index.html
+++ b/index.html
@@ -47,13 +47,7 @@
 			id="first">
 			<div class="content">
 				<div style="font-size: 2em;">YAYYYY I'm so happy you <strong>CHOSE</strong> yes</div>
-				<p>This means you are invited to go on a <strong>DATE</strong> with me! How great and lucky is that?
-
-					element, and it's generally used &ndash; as its name implies
-					&ndash; to spotlight a particular feature, subject, or pretty much whatever. You can customize its
-					<span class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an
-					optional <code>onload</code> or <code>onscroll</code> transition modifier (<a
-						href="#reference-spotlight">details</a>).
+				<p>This means you are invited to go on a <strong>DATE</strong> with me! How great and lucky is that? The current date for the date is February 16th, but as we both know dates change really easily. However, we <strong>MUST</strong> go out during reading week at least once, to celebrate Valentines day. Not 100% sure what we are doing yet, but whatever it is I'm sure it'll be fun because we have each other. I mean, I hope you enjoy my company...
 				</p>
 				<ul class="actions stacked">
 					<li><a href="fr.html" class="button">Regret saying yes? choose again</a></li>
@@ -65,32 +59,17 @@
 		</section>
 
 		<!-- Spotlight -->
-		<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
-			<div class="content">
-				<h2>Spotlight</h2>
-				<p>This is also a <strong>Spotlight</strong> element, and it's here because this demo would look a bit
-					empty with just one spotlight. Like all spotlights, you can customize its <span
-						class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an
-					optional <code>onload</code> or <code>onscroll</code> transition modifier (<a
-						href="#reference-spotlight">details</a>).</p>
-				<ul class="actions stacked">
-					<li><a href="#" class="button"></a></li>
-				</ul>
-			</div>
-			<div class="image">
-				<img src="images/spotlight02.jpg" alt="" />
-			</div>
-		</section>
-
-		<!-- Spotlight -->
 		<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 			<div class="content">
 				<h2>Spotlight</h2>
 				<p>And yes, this is another <strong>Spotlight</strong> element, and it's also here because I need to
-					fill a bit of space. Naturally, like any other spotlight, you can customize its <span
-						class="demo-controls">appearance with a number of modifiers</span>, as well as assign it an
-					optional <code>onload</code> or <code>onscroll</code> transition modifier (<a
-						href="#reference-spotlight">details</a>).</p>
+					fill a bit of space. Naturally, like any other spotlight, you can customize its \
+					<span class="demo-controls">appearance with a number of modifiers</span>
+					, as well as assign it an optional
+					<code>onload</code> or
+					<code>onscroll</code>
+					transition modifier (<a href="#reference-spotlight">details</a>).
+				</p>
 				<ul class="actions stacked">
 					<li><a href="#" class="button">Learn More</a></li>
 				</ul>
