--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
 			<span class="heart-rain">&#9829;</span>
 			<span class="heart-rain">&#9829;</span>
 
-			<div class="content" id="heart">
-				<h1 style="">💞Will you be my Valentine?👉👈</h1>
-
+			<div class="content">
+				<img id = "heart" src="/valentine.png"></img>
 				<ul class="actions stacked">
 					<li>
 						<a href="#first" class="button large wide smooth-scroll-middle">YES</a>
@@ -47,78 +46,63 @@
 			id="first">
 			<div class="content">
 				<div style="font-size: 2em;">YAYYYY I'm so happy you <strong>CHOSE</strong> yes</div>
-				<p>This means you are invited to go on a <strong>DATE</strong> with me! How great and lucky is that? The current date for the date is February 16th, but as we both know dates change really easily. However, we <strong>MUST</strong> go out during reading week at least once, to celebrate Valentines day. Not 100% sure what we are doing yet, but whatever it is I'm sure it'll be fun because we have each other. I mean, I hope you enjoy my company...
+				<p>Look at me smiling on the left. Anyway, you know what this means? You are invited to go on a <strong>DATE</strong> with me! How great and lucky is that? The current day for the date is February 16th, but as we both know dates change really easily. However, we <strong>MUST</strong> go out during reading week at least once, for Valentines day. Not 100% sure what we are doing yet, but whatever it is I'm sure it'll be fun because we have each other. At least...I hope you're enjoying my company.
 				</p>
 				<ul class="actions stacked">
 					<li><a href="fr.html" class="button">Regret saying yes? choose again</a></li>
 				</ul>
 			</div>
 			<div class="image">
-				<img src="images/spotlight01.jpg" alt="" />
+				<img src="/me.jpg" alt="" />
 			</div>
 		</section>
 
-		<!-- Spotlight -->
-		<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
-			<div class="content">
-				<h2>Spotlight</h2>
-				<p>And yes, this is another <strong>Spotlight</strong> element, and it's also here because I need to
-					fill a bit of space. Naturally, like any other spotlight, you can customize its \
-					<span class="demo-controls">appearance with a number of modifiers</span>
-					, as well as assign it an optional
-					<code>onload</code> or
-					<code>onscroll</code>
-					transition modifier (<a href="#reference-spotlight">details</a>).
-				</p>
-				<ul class="actions stacked">
-					<li><a href="#" class="button">Learn More</a></li>
-				</ul>
-			</div>
-			<div class="image">
-				<img src="images/spotlight03.jpg" alt="" />
-			</div>
-		</section>
+		
 
 		<!-- Gallery -->
 		<section class="wrapper style1 align-center">
 			<div class="inner">
 				<h2>I Love you SOO SO SO MUCH</h2>
-				<p><strong>Cute Photos:)</strong></p>
+				<p><strong>Scroll down for some cute photos :)</strong></p>
 			</div>
 
 			<!-- Gallery -->
 			<div class="gallery style2 medium lightbox onscroll-fade-in">
 				<article>
-					<a href="images/gallery/fulls/01.jpg" class="image">
-						<img src="images/gallery/thumbs/01.jpg" alt="" />
+
+					<a href="/first.jpg" class="image">
+						<img src="/first.jpg" alt=""/>
 					</a>
 					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+						<h3>First photo we mean't to take together</h3>
+						<p>The one you had doesn't count. We had no clue the lore that would happen lmaoo. I looked so good during OWEEK😭 I fell off need to lock in soon</p>
 						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
+							<li><span class="button small">Zoom</span></li>
 						</ul>
 					</div>
 				</article>
-				<article>
-					<a href="images/gallery/fulls/02.jpg" class="image">
-						<img src="images/gallery/thumbs/02.jpg" alt="" />
-					</a>
+				<!--1080x810-->
+				<article style="width:15em">
+						<img src="/image.png" alt="" style="display: block;
+						max-width:378px;
+						width: auto;
+						height: auto;"/>
+						
 					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
+						<h3>Remember sex toy bingo...</h3>
+						<p style="font-size: medium;">I took a video during it and at the end I stopped extra long on you cause I thought you were really pretty... I PROMISE I'M NOT WIERD I DON'T JUST TAKE RANDOM VIDEOS LIKE THIS I PROMISEEEE!!!!! I JUST GOT <strong>DISTRACTED</strong> WHEN TAKING THE VIDEO CUZ UR SO PRETTY #Notmyfault. Anyway I'm so glad you texted me, I'm very lucky.</p>
 					</div>
 				</article>
-				<article>
-					<a href="images/gallery/fulls/03.jpg" class="image">
-						<img src="images/gallery/thumbs/03.jpg" alt="" />
+				<article style="width:15em;">
+					<a href="/third.jpg" class="image">
+						<img src="/third.jpg" alt="" style="display: block;
+						max-width:100%;
+						width: 378px;
+						height: 16.88em;"/>
 					</a>
 					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+						<h3>YOU'RE SO CUTE!!!!!</h3>
+						<p>I don't know what to caption this picture. It's just a really really really really cute photo of you. I Love you!</p>
 						<ul class="actions fixed">
 							<li><span class="button small">Details</span></li>
 						</ul>
