--- a/fr.html
+++ b/fr.html
@@ -44,7 +44,7 @@
 		<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
 			id="first">
 			<div class="content">
-				<div style="font-size: 2em;">It's ok...IG... I'll forgive you</div>
+				<div style="font-size: 2em;">It's ok...ig... I'll forgive you</div>
 				<p><strong>DO NOT let me catch you doing this again</strong>
 				</p>
 				<ul class="actions stacked">
