--- a/index.html
+++ b/index.html
@@ -108,25 +108,31 @@
 						</ul>
 					</div>
 				</article>
-				<article>
-					<a href="images/gallery/fulls/04.jpg" class="image">
-						<img src="images/gallery/thumbs/04.jpg" alt="" />
+				<article style="width:15.5em;">
+					<a href="/fourth.jpg" class="image">
+						<img src="/fourth.jpg" alt="" style="display: block;
+						max-width:100%;
+						width: 378px;
+						height: 16.88em;"/>
 					</a>
 					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+						<h3>Us at Halloween!!</h3>
+						<p>First time you laid on my shoulder. The butterflys😭</p>
 						<ul class="actions fixed">
 							<li><span class="button small">Details</span></li>
 						</ul>
 					</div>
 				</article>
-				<article>
-					<a href="images/gallery/fulls/05.jpg" class="image">
-						<img src="images/gallery/thumbs/05.jpg" alt="" />
+				<article style="width:15.7em;">
+					<a href="/fifth.jpg" class="image" style="display: block;
+					max-width:100%;
+					width: 378px;
+					height: 16.88em;"/>
+						<img src="/fifth.jpg" alt="" />
 					</a>
 					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+						<h3>Repeat IK</h3>
+						<p>We need to take more photos together. Anyway this is my favourite photo of us together. We leaning on each other and shit the height difference it's SOOOOOO CUTEEEEE</p>
 						<ul class="actions fixed">
 							<li><span class="button small">Details</span></li>
 						</ul>
