--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					<a href="/fifth.jpg" class="image" style="display: block;
 					max-width:100%;
 					width: 378px;
-					height: 16.88em;"/>
+					height: 16.88em;">
 						<img src="/fifth.jpg" alt="" />
 					</a>
 					<div class="caption">
@@ -138,13 +138,16 @@
 						</ul>
 					</div>
 				</article>
-				<article>
-					<a href="images/gallery/fulls/06.jpg" class="image">
-						<img src="images/gallery/thumbs/06.jpg" alt="" />
+				<article  style="width:15.6em;">
+					<a href="/sixth.jpg" class="image">
+						<img src="/sixth.jpg" alt="" style="display: block;
+						max-width:100%;
+						width: 378px;
+						height: 16.88em;"/>
 					</a>
 					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+						<h3>Photo with ur siblings</h3>
+						<p>This day was soooo stressful😭but I'm super glad we got to do it. Lowkey tho...we hung out a lot more in secret then we do now maybe we should go back to that so we have more time together?</p>
 						<ul class="actions fixed">
 							<li><span class="button small">Details</span></li>
 						</ul>
