--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<h3>YOU'RE SO CUTE!!!!!</h3>
 						<p>I don't know what to caption this picture. It's just a really really really really cute photo of you. I Love you!</p>
 						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
+							<li><span class="button small">Zoom</span></li>
 						</ul>
 					</div>
 				</article>
@@ -119,7 +119,7 @@
 						<h3>Us at Halloween!!</h3>
 						<p>First time you laid on my shoulder. The butterflys😭</p>
 						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
+							<li><span class="button small">Zoom</span></li>
 						</ul>
 					</div>
 				</article>
@@ -134,7 +134,7 @@
 						<h3>Repeat IK</h3>
 						<p>We need to take more photos together. Anyway this is my favourite photo of us together. We leaning on each other and shit the height difference it's SOOOOOO CUTEEEEE</p>
 						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
+							<li><span class="button small">Zoom</span></li>
 						</ul>
 					</div>
 				</article>
@@ -149,83 +149,58 @@
 						<h3>Photo with ur siblings</h3>
 						<p>This day was soooo stressful😭but I'm super glad we got to do it. Lowkey tho...we hung out a lot more in secret then we do now maybe we should go back to that so we have more time together?</p>
 						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
+							<li><span class="button small">Zoom</span></li>
 						</ul>
 					</div>
 				</article>
-				<article>
-					<a href="images/gallery/fulls/07.jpg" class="image">
-						<img src="images/gallery/thumbs/07.jpg" alt="" />
+				<article style="width:15.5em;">
+					<a href="/seventh.jpg" class="image">
+						<img src="/seventh.jpg" alt="" style="display: block;
+						max-width:100%;
+						width: 378px;
+						height: 16.88em;" />
 					</a>
 					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+						<h3>Day with Nika!!</h3>
+						<p style="font-size: medium;">That day was a lot of fun, Nika is freaky af and I haven't she definetly a good person deep down and she did not deserve to be treated, no one does and especially not her, I feel really bad but at least she's having fun now! Also, we should've made a heart for the shadow</p>
 						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
+							<li><span class="button small">Zoom</span></li>
 						</ul>
 					</div>
 				</article>
-				<article>
-					<a href="images/gallery/fulls/08.jpg" class="image">
-						<img src="images/gallery/thumbs/08.jpg" alt="" />
+				<article style="width:15.5em;">
+					<a href="/eigth.jpg" class="image" style="display: block;
+					max-width:100%;
+					width: 378px;
+					height: 16.88em;">
+						<img src="/eigth.jpg" alt="" />
 					</a>
 					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+						<h3>ROBLOX!</h3>
+						<p>LMAOOOO the barbie let's play was really really fun, you look so happy in this photo. You're smile might be the most beautiful thing ever, but it's like an eclipse it happens once in a million years</p>
 						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
+							<li><span class="button small">Zoom</span></li>
 						</ul>
 					</div>
 				</article>
-				<article>
-					<a href="images/gallery/fulls/09.jpg" class="image">
-						<img src="images/gallery/thumbs/09.jpg" alt="" />
+				<article style="width:15.5em;">
+					<a href="/ninth.jpg" class="image">
+						<img src="/ninth.jpg" alt="" style="display: block;
+						max-width:100%;
+						width: 378px;
+						height: 16.88em;"/>
 					</a>
 					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+						<h3>😭</h3>
+						<p>Why is the photo scaled like that😭anyway this was us on the hay bales on the best date ever! Hopefully we can go on another big date soon</p>
 						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
+							<li><span class="button small">Zoom</span></li>
 						</ul>
 					</div>
 				</article>
-				<article>
-					<a href="images/gallery/fulls/10.jpg" class="image">
-						<img src="images/gallery/thumbs/10.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/11.jpg" class="image">
-						<img src="images/gallery/thumbs/11.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/12.jpg" class="image">
-						<img src="images/gallery/thumbs/12.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Title</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				I Love you
+				
+				Text me cheerio jus so ik u saw all the photos. I Love you SOOOOOOOOOOOOOOOOO MUCH and yuh we NEED more to take more photos
+				
 
 			</div>
 
