--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 						</ul>
 					</div>
 				</article>
-				<article style="width:15.7em;">
+				<article style="width:15em;">
 					<a href="/fifth.jpg" class="image" style="display: block;
 					max-width:100%;
 					width: 378px;
@@ -122,7 +122,7 @@
 					</a>
 					<div class="caption">
 						<h3>Repeat IK</h3>
-						<p>We need to take more photos together. Anyway this is my favourite photo of us together. Us leaning on each other and shit the height difference it's SOOOOOO CUTEEEEE</p>
+						<p>We need to take more photos together. Anyway this is my favourite photo of us together. Us leaning on each other and shit the height difference tooo, it's jus SOOOOOO CUTEEEEE</p>
 						<ul class="actions fixed">
 							<li><span class="button small">Zoom</span></li>
 						</ul>
@@ -152,13 +152,13 @@
 					</a>
 					<div class="caption">
 						<h3>Day with Nika!!</h3>
-						<p style="font-size: medium;">That day was a lot of fun, Nika is freaky af but even tho I don't rlly know her I can tell she a good person deep down, she did not deserve to be treated that way, no one does and especially not her. I feel really bad but at least he's gone and she's having fun now! Also, we should've made a heart for the shadow</p>
+						<p style="font-size: small;">That day was a lot of fun, Even tho I don't rlly know Nika I can tell she a good person deep down despite the freaky shit. She did not deserve to be treated that way, no one does and especially not her. I feel really bad but at least he's gone and she's having fun now! Also, we should've made a heart for the shadow</p>
 						<ul class="actions fixed">
 							<li><span class="button small">Zoom</span></li>
 						</ul>
 					</div>
 				</article>
-				<article style="width:15.5em;">
+				<article style="width:15.5em; height:16.9em">
 					<a href="/eigth.jpg" class="image" style="display: block;
 					max-width:100%;
 					width: 378px;
@@ -188,7 +188,7 @@
 						</ul>
 					</div>
 				</article>
-				<article style="width:15em">
+				<article style="width:17em; height:16.9em">
 					<img src="/image.png" alt="" style="display: block;
 					max-width:378px;
 					width: auto;
@@ -196,10 +196,10 @@
 					
 				<div class="caption">
 					<h3>Remember sex toy bingo...</h3>
-					<p style="font-size: medium;">I took a video during it and at the end I stopped extra long on you cause I thought you were really pretty... I PROMISE I'M NOT WIERD I DON'T JUST TAKE RANDOM VIDEOS LIKE THIS I PROMISEEEE!!!!! I JUST GOT <strong>DISTRACTED</strong> WHEN TAKING THE VIDEO CUZ UR SO PRETTY #Notmyfault. Anyway I'm so glad you texted me, I'm very lucky.</p>
+					<p style="font-size: small;">I took a video during it and at the end I stopped extra long on you cause I thought you were really pretty... I PROMISE I'M NOT WIERD I DON'T JUST TAKE RANDOM VIDEOS LIKE THIS I PROMISEEEE!!!!! I JUST GOT <strong>DISTRACTED</strong> WHEN TAKING THE VIDEO CUZ UR SO PRETTY #Notmyfault. Anyway I'm so glad you texted me, I'm very lucky.</p>
 				</div>
 			</article>
-				Text me cheerio jus so ik u saw all the photos. I Love you SOOOOOOOOOOOOOOOOO MUCH and yuh we NEED more to take more photos
+				Text me cheerio for yes you want to be my valentine and keep urself safe for no becuase that's what I'd do if you said no. I Love you SOOOOOOOOOOOOOOOOO MUCH and we NEED more to take more photos
 				
 
 			</div>
