--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
 			<div class="content">
 				<img id = "heart" src="/valentine.png"></img>
-				<ul class="actions stacked">
+				<ul class="actions stacked" style="padding-left: 5rem;">
 					<li>
-						<a href="#first" class="button large wide smooth-scroll-middle">YES</a>
+						<a href="#first" class="button large wide smooth-scroll-middle">yes</a>
 						🙏
 						<a href="#first" class="button large wide smooth-scroll-middle">YESSS</a>
 					</li>
@@ -46,7 +46,7 @@
 			id="first">
 			<div class="content">
 				<div style="font-size: 2em;">YAYYYY I'm so happy you <strong>CHOSE</strong> yes</div>
-				<p>Look at me smiling on the left. Anyway, you know what this means? You are invited to go on a <strong>DATE</strong> with me! How great and lucky is that? The current day for the date is February 16th, but as we both know dates change really easily. However, we <strong>MUST</strong> go out during reading week at least once, for Valentines day. Not 100% sure what we are doing yet, but whatever it is I'm sure it'll be fun because we have each other. At least...I hope you enjoy my company.
+				<p>Look at me smiling on the left. Anyway, you know what this means? You are invited to go on a <strong>DATE</strong> with me! How great and lucky is that? The current day for the date is February 16th, but as we both know dates change really easily. However, we <strong>MUST</strong> go out during reading week at least once, for Valentines day. Not 100% sure what we are doing yet, but whatever it is I'm sure it'll be fun because we have each other. At least...I hope you will enjoy my company.
 				</p>
 				<ul class="actions stacked">
 					<li><a href="fr.html" class="button">Regret saying yes? choose again</a></li>
