--- a/fr.html
+++ b/fr.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-	<link rel="icon" href="/kissy.png">
-	<title><- Us when?</title>
+	<link rel="icon" href="/crying.png">
+	<title>Seriously?</title>
 			<meta charset="utf-8" />
 			<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 			<link rel="stylesheet" href="assets/css/main.css" />
