--- a/Tyra.html
+++ b/Tyra.html
@@ -10,11 +10,20 @@
       height: 100vh;
       background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%);
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       font-family: 'Poppins', sans-serif;
       overflow: hidden;
       position: relative;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 48px;
+      color: #ffffff;
+      margin-bottom: 20px;
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.2);
     }
 
     #timer {
@@ -82,6 +91,7 @@
 </head>
 <body>
 
+<h1>💖 Website reveal in: 💖</h1>
 <div id="timer">24:00:00</div>
 <div class="hearts" id="hearts"></div>
 
@@ -92,7 +102,6 @@
   let startTime = localStorage.getItem(TIMER_KEY);
 
   if (!startTime) {
-    // If no start time, set it now
     startTime = Date.now();
     localStorage.setItem(TIMER_KEY, startTime);
   } else {
