--- a/Tyra.html
+++ b/Tyra.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Love Countdown Timer</title>
+  <title>Gift Part II</title>
+	<link rel="icon" href="/Cake.png">
   <style>
     body {
       margin: 0;
@@ -19,11 +20,20 @@
       text-align: center;
     }
 
-    h1 {
-      font-size: 48px;
+    h1, h2 {
+      margin: 0;
       color: #ffffff;
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.3);
+    }
+
+    h1 {
+      font-size: 64px;
       margin-bottom: 20px;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.2);
+    }
+
+    h2 {
+      font-size: 40px;
+      margin-bottom: 20px;
     }
 
     #timer {
@@ -91,7 +101,8 @@
 </head>
 <body>
 
-<h1>💖 Website reveal in: 💖</h1>
+<h1>🎉 Happy Birthday Babe!! 🎉</h1>
+<h2>💖 Website Reveal In: 💖</h2>
 <div id="timer">24:00:00</div>
 <div class="hearts" id="hearts"></div>
 
