--- a/Tyra.html
+++ b/Tyra.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Gift Part II</title>
+  <title>Birthday Gift Part II</title>
 	<link rel="icon" href="/Cake.png">
+
   <style>
     body {
       margin: 0;
@@ -51,7 +52,7 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      top: 0;
+      bottom: 0; /* Start from the bottom */
       left: 0;
       overflow: hidden;
       pointer-events: none;
@@ -89,11 +90,11 @@
 
     @keyframes float {
       0% {
-        transform: translateY(0) rotate(45deg);
+        transform: translateY(100vh) rotate(45deg); /* Start from the bottom */
         opacity: 0.6;
       }
       100% {
-        transform: translateY(-100vh) rotate(45deg);
+        transform: translateY(-100vh) rotate(45deg); /* End at the top */
         opacity: 0;
       }
     }
@@ -102,7 +103,7 @@
 <body>
 
 <h1>🎉 Happy Birthday Babe!! 🎉</h1>
-<h2>💖 Website Reveal In: 💖</h2>
+<h2>💖 Website reveal in: 💖</h2>
 <div id="timer">24:00:00</div>
 <div class="hearts" id="hearts"></div>
 
