--- a/Tyra.html
+++ b/Tyra.html
@@ -103,7 +103,7 @@
 <body>
 
 <h1>🎉 Happy Birthday Babe!! 🎉</h1>
-<h2>💖 Website reveal in: 💖</h2>
+<h2>💖 Gift Reveal in: 💖</h2>
 <div id="timer">24:00:00</div>
 <div class="hearts" id="hearts"></div>
 
