--- a/Calendar.html
+++ b/Calendar.html
@@ -137,11 +137,11 @@
     </div>
     <div class="item">
       <time>2:00 – 3:30</time>
-      Niagara Falls Town – Walk + Explore + Cow’s Ice Cream 🍦
+      Niagara Falls Town – Walk + Explore + Cow’s Ice Cream? 🍦
     </div>
     <div class="item">
       <time>4:00 – 6:00</time>
-      Clifton Fun: Ferris Wheel 🎡 or Arcade 🎮 or Whatever Looks Fun!
+      Clifton Hill: Ferris Wheel 🎡 or Arcade 🎮 or Whatever we got funds for
     </div>
     <div class="item">
       <time>6:15 – 7:45</time>
@@ -152,7 +152,7 @@
       Drive Home 🚙💤
     </div>
 
-    <div class="note">✨ Changes to the plan can be made whenever by Tyra cause today is all about her ✨</div>
+    <div class="note">✨ Changes to the plan can be made by Tyra whenever cause today is all about her ✨acc tbh everydays all about her but wtv</div>
   </div>
 
   <div class="heart-bg" id="hearts"></div>
